--- a/temp_analysis_bonus_1.ipynb
+++ b/temp_analysis_bonus_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,40 +19,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-07</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-08</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-09</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-11</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station        date  prcp  tobs\n",
+       "0  USC00519397  2010-01-01  0.08    65\n",
+       "1  USC00519397  2010-01-02  0.00    63\n",
+       "2  USC00519397  2010-01-03  0.00    74\n",
+       "3  USC00519397  2010-01-04  0.00    76\n",
+       "4  USC00519397  2010-01-06   NaN    73\n",
+       "5  USC00519397  2010-01-07  0.06    70\n",
+       "6  USC00519397  2010-01-08  0.00    64\n",
+       "7  USC00519397  2010-01-09  0.00    68\n",
+       "8  USC00519397  2010-01-10  0.00    73\n",
+       "9  USC00519397  2010-01-11  0.01    64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# \"tobs\" is \"temperature observations\"\n",
-    "df = pd.read_csv('hawaii_measurements.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('Instructions/Resources/hawaii_measurements.csv')\n",
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the date column format from string to datetime"
+    "# Convert the date column format from string to datetime\n",
+    "df['date'] = pd.to_datetime(df['date'], format= '%Y-%m-%d')\n",
+    "df['month'] = df['date'].dt.strftime('%m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the date column as the DataFrame index"
+    "# Set the date column as the DataFrame index\n",
+    "df.set_index(\"date\", inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-03</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-19</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>71</td>\n",
+       "      <td>08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-20</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "      <td>08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-21</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>76</td>\n",
+       "      <td>08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-22</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>76</td>\n",
+       "      <td>08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>76</td>\n",
+       "      <td>08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19550 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                station  prcp  tobs month\n",
+       "date                                     \n",
+       "2010-01-01  USC00519397  0.08    65    01\n",
+       "2010-01-02  USC00519397  0.00    63    01\n",
+       "2010-01-03  USC00519397  0.00    74    01\n",
+       "2010-01-04  USC00519397  0.00    76    01\n",
+       "2010-01-06  USC00519397   NaN    73    01\n",
+       "...                 ...   ...   ...   ...\n",
+       "2017-08-19  USC00516128  0.09    71    08\n",
+       "2017-08-20  USC00516128   NaN    78    08\n",
+       "2017-08-21  USC00516128  0.56    76    08\n",
+       "2017-08-22  USC00516128  0.50    76    08\n",
+       "2017-08-23  USC00516128  0.45    76    08\n",
+       "\n",
+       "[19550 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Drop the date column"
+    "# Drop the date column\n",
+    "station_df = df[[\"station\", \"prcp\", \"tobs\", \"month\"]]\n",
+    "station_df"
    ]
   },
   {
@@ -64,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,20 +348,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.94\n"
+     ]
+    }
+   ],
    "source": [
-    "# Identify the average temperature for June"
+    "# Identify the average temperature for June\n",
+    "june_df = station_df[station_df[\"month\"] == \"06\"]\n",
+    "june_temp = june_df[\"tobs\"].mean()\n",
+    "print(round(june_temp, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71.04\n"
+     ]
+    }
+   ],
    "source": [
-    "# Identify the average temperature for December"
+    "# Identify the average temperature for December\n",
+    "dec_df = station_df[station_df[\"month\"] == \"12\"]\n",
+    "dec_temp = dec_df[\"tobs\"].mean()\n",
+    "print(round(dec_temp, 2))"
    ]
   },
   {
