--- a/temp_analysis_bonus_1.ipynb
+++ b/temp_analysis_bonus_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,41 +85,6 @@
        "      <td>NaN</td>\n",
        "      <td>73</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-09</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-10</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-11</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -130,49 +95,163 @@
        "1  USC00519397  2010-01-02  0.00    63\n",
        "2  USC00519397  2010-01-03  0.00    74\n",
        "3  USC00519397  2010-01-04  0.00    76\n",
-       "4  USC00519397  2010-01-06   NaN    73\n",
-       "5  USC00519397  2010-01-07  0.06    70\n",
-       "6  USC00519397  2010-01-08  0.00    64\n",
-       "7  USC00519397  2010-01-09  0.00    68\n",
-       "8  USC00519397  2010-01-10  0.00    73\n",
-       "9  USC00519397  2010-01-11  0.01    64"
+       "4  USC00519397  2010-01-06   NaN    73"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# \"tobs\" is \"temperature observations\"\n",
-    "df = pd.read_csv('Instructions/Resources/hawaii_measurements.csv')\n",
-    "df.head(10)"
+    "df = pd.read_csv('hawaii_measurements.csv')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19545</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-19</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19546</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19547</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-21</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19548</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-22</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19549</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           station        date  prcp  tobs\n",
+       "19545  USC00516128  2017-08-19  0.09    71\n",
+       "19546  USC00516128  2017-08-20   NaN    78\n",
+       "19547  USC00516128  2017-08-21  0.56    76\n",
+       "19548  USC00516128  2017-08-22  0.50    76\n",
+       "19549  USC00516128  2017-08-23  0.45    76"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.date.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert the date column format from string to datetime\n",
-    "df['date'] = pd.to_datetime(df['date'], format= '%Y-%m-%d')\n",
-    "df['month'] = df['date'].dt.strftime('%m')"
+    "df.date = pd.to_datetime(df.date, infer_datetime_format=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the date column as the DataFrame index\n",
-    "df.set_index(\"date\", inplace=True)"
+    "df = df.set_index(df['date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the date column\n",
+    "df = df.drop(columns='date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,11 +278,9 @@
        "      <th>station</th>\n",
        "      <th>prcp</th>\n",
        "      <th>tobs</th>\n",
-       "      <th>month</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>date</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -215,110 +292,52 @@
        "      <td>USC00519397</td>\n",
        "      <td>0.08</td>\n",
        "      <td>65</td>\n",
-       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-02</th>\n",
        "      <td>USC00519397</td>\n",
        "      <td>0.00</td>\n",
        "      <td>63</td>\n",
-       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-03</th>\n",
        "      <td>USC00519397</td>\n",
        "      <td>0.00</td>\n",
        "      <td>74</td>\n",
-       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-04</th>\n",
        "      <td>USC00519397</td>\n",
        "      <td>0.00</td>\n",
        "      <td>76</td>\n",
-       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-01-06</th>\n",
        "      <td>USC00519397</td>\n",
        "      <td>NaN</td>\n",
        "      <td>73</td>\n",
-       "      <td>01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-19</th>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>71</td>\n",
-       "      <td>08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-20</th>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>78</td>\n",
-       "      <td>08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-21</th>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>76</td>\n",
-       "      <td>08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-22</th>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>76</td>\n",
-       "      <td>08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-23</th>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>76</td>\n",
-       "      <td>08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19550 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                station  prcp  tobs month\n",
-       "date                                     \n",
-       "2010-01-01  USC00519397  0.08    65    01\n",
-       "2010-01-02  USC00519397  0.00    63    01\n",
-       "2010-01-03  USC00519397  0.00    74    01\n",
-       "2010-01-04  USC00519397  0.00    76    01\n",
-       "2010-01-06  USC00519397   NaN    73    01\n",
-       "...                 ...   ...   ...   ...\n",
-       "2017-08-19  USC00516128  0.09    71    08\n",
-       "2017-08-20  USC00516128   NaN    78    08\n",
-       "2017-08-21  USC00516128  0.56    76    08\n",
-       "2017-08-22  USC00516128  0.50    76    08\n",
-       "2017-08-23  USC00516128  0.45    76    08\n",
-       "\n",
-       "[19550 rows x 4 columns]"
+       "                station  prcp  tobs\n",
+       "date                               \n",
+       "2010-01-01  USC00519397  0.08    65\n",
+       "2010-01-02  USC00519397  0.00    63\n",
+       "2010-01-03  USC00519397  0.00    74\n",
+       "2010-01-04  USC00519397  0.00    76\n",
+       "2010-01-06  USC00519397   NaN    73"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop the date column\n",
-    "station_df = df[[\"station\", \"prcp\", \"tobs\", \"month\"]]\n",
-    "station_df"
+    "df.head()"
    ]
   },
   {
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,78 +358,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter data for desired months"
+    "# Filter data for desired months\n",
+    "jun_data = df[df.index.month == 6]\n",
+    "dec_data = df[df.index.month == 12]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74.94\n"
-     ]
+     "data": {
+      "text/plain": [
+       "prcp     0.136360\n",
+       "tobs    74.944118\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Identify the average temperature for June\n",
-    "june_df = station_df[station_df[\"month\"] == \"06\"]\n",
-    "june_temp = june_df[\"tobs\"].mean()\n",
-    "print(round(june_temp, 2))"
+    "jun_data.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71.04\n"
-     ]
+     "data": {
+      "text/plain": [
+       "prcp     0.216819\n",
+       "tobs    71.041529\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Identify the average temperature for December\n",
-    "dec_df = station_df[station_df[\"month\"] == \"12\"]\n",
-    "dec_temp = dec_df[\"tobs\"].mean()\n",
-    "print(round(dec_temp, 2))"
+    "dec_data.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create collections of temperature data"
+    "# Create collections of temperature data\n",
+    "jun_temp = jun_data.tobs\n",
+    "dec_temp = dec_data.tobs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=31.60372399000329, pvalue=3.9025129038616655e-191)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Run paired t-test"
+    "# Run paired t-test \n",
+    "stats.ttest_ind(jun_temp, dec_temp)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis"
+    "### Analysis\n",
+    "\n",
+    "Across all the stations, the mean temperatures in June and December temperature in years 2010-2017 differ by 3.9 degrees Fahrenheit. An unpaired t-test was conducted, and with an extremely low p-value, the difference is deemed statistically significant."
    ]
   },
   {
@@ -437,9 +478,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
