--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -349,6 +349,7 @@
    ],
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "# Note: \"Measurement.tobs\" = \"Temperature Observation\" for that station\n",
     "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
     "    filter(Measurement.station == 'USC00519281').all()"
    ]
@@ -412,10 +413,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
